testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try15.adl
CONTEXT Try15 IN ENGLISH

PURPOSE PATTERN Try15 IN ENGLISH 
{+
This pattern is meant to test the translation of Interfaces in Ampersand.
+}

PATTERN Try15
  RELATION r[A*A]
  RELATION s[A*A]
  RELATION t[A*A]
ENDPATTERN

INTERFACE TESTTry15 : I[A] cRud BOX [ id : I ]
INTERFACE TESTTry15 : I[B] cRud BOX [ id : I ]
ENDCONTEXT

{- 
   Purpose: to check that uniqueness of INTERFACE labels are tested.
   Result: FAIL
   Reason: on line 14 and 15 there are two views with the same name.
   
   Message:
C:> ampersand check Try15.adl
Reading file /Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try15.adl
/Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try15.adl:14:1 error:
  Every interface must have a unique name. "TEST Try15", however, is used at:/Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try15.adl:14:1
      /Users/sjo00577/git/Ampersand/testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/Try15.adl:15:1.
ExitFailure 10
C:>
-}